--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -54,10 +54,11 @@ body {
 .jumbotron {
     text-align: center;
     border-bottom: 1px solid #e5e5e5;
-    .btn {
-        font-size: 21px;
-        padding: 14px 24px;
-    }
+
+    background: url('../images/Banner_Transparent.png');
+    height: 370px;
+    width: 767px;
+    background-repeat: no-repeat;
 }
 
 /* Supporting marketing content */
