--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -54,14 +54,19 @@ body {
 .jumbotron {
     text-align: center;
     border-bottom: 1px solid #e5e5e5;
-
-    background: url('../images/Banner_Transparent.png');
-    background-size: contain;
-    height: 370px;
-    width: 767px;
-    background-repeat: no-repeat;
+    background-color: initial;
+    // background: url('../images/Banner_Transparent.png');
+    // background-size: contain;
+    // height: 370px;
+    // max-width: 730px;
+    // background-repeat: no-repeat;
     padding: 0;
     margin: 0;
+
+    max-width: 100%;
+    img {
+        max-width: inherit;
+    }
 }
 
 /* Supporting marketing content */
