add content copy for landing page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -107,6 +107,7 @@ body {
     .jumbotron {
         // make sure banner image is responsive
         width: inherit;
+        padding: 0 30px
     }
 
 
