add mailchimp html and customize form

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -79,7 +79,7 @@ body {
     }
 }
 
-h1 {
+h1, h2, label {
     margin: 20px 0;
     font-family: Brandon, "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
